<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dialog_itemHeight"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/checkBox1"
        android:layout_margin="@dimen/dialog_magin"
        android:gravity="center_vertical"
        android:text="@string/year"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/dialog_textSize" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_itemHeight"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_margin="@dimen/dialog_magin"
        android:gravity="center"
        android:textSize="@dimen/dialog_textSize" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dialog_itemHeight"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/spinner1"
        android:layout_margin="@dimen/dialog_magin"
        android:gravity="center_vertical"
        android:text="@string/month"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/dialog_textSize" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_itemHeight"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:gravity="center"
        android:layout_margin="@dimen/dialog_magin"
        android:textSize="@dimen/dialog_textSize" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/dialog_magin"
        android:text="@string/display_all"
        android:textSize="@dimen/dialog_textSize" />

</RelativeLayout>